@@ -52,8 +52,8 @@ werror(const char *format, ...) PRINTF_STYLE(1, 2);
  * treated as an error; return value is zero, and no space is
  * allocated. The returned data is NUL-terminated, for convenience. */
 
-unsigned
-read_file(const char *name, unsigned size, char **buffer);
+size_t
+read_file(const char *name, size_t size, uint8_t **buffer);
 
 int
 write_file(const char *name, unsigned size, const char *buffer);
