@@ -47,7 +47,7 @@ read_rsa_key(const char *name,
 	     struct rsa_private_key *priv)
 {
   unsigned length;
-  char *buffer;
+  uint8_t *buffer;
   int res;
   
   length = read_file(name, 0, &buffer);
